--- a/docs/.vuepress/styles/custom.css
+++ b/docs/.vuepress/styles/custom.css
@@ -59,3 +59,17 @@
   --vp-sidebar-bg-color: #161618;                     /* 侧边栏背景 */
   --vp-code-block-bg: #202127;                        /* 代码块背景 */
 }
+
+.vp-doc-container {
+  --vp-doc-blog-bg: rgba(0, 153, 255, 0.122);
+
+  background-image:
+    linear-gradient(90deg, var(--vp-doc-blog-bg) 3%, transparent 0),
+    linear-gradient(1turn, var(--vp-doc-blog-bg) 3%, transparent 0);
+  background-position: 50%;
+  background-size: 20px 20px;
+}
+
+[data-theme="dark"] .vp-doc-container {
+  --vp-doc-blog-bg: rgba(0, 153, 255, 0.492);
+}
